<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/medium_purple"
        android:padding="20dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="-10dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="Back"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white" />

        </FrameLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="Criteria and Guidelines"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- 1. Select an Event to Join -->
            <LinearLayout
                android:id="@+id/text_1_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/text_1_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select an Event to Join"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/text_1a_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_1a"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:layout_marginBottom="15dp"
                        />

                    <TextView
                        android:id="@+id/text_1b_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_1b"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>


            <!-- 2. Join the Waitlist -->
            <LinearLayout
                android:id="@+id/text_2_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/text_2_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Join the Waitlist"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/text_2a_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_2a"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:layout_marginBottom="15dp"
                        />

                    <TextView
                        android:id="@+id/text_2b_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_2b"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>


            <!-- 3. Wait for the Registration Deadline -->
            <LinearLayout
                android:id="@+id/text_3_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/text_2_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wait for the Registration Deadline"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/text_3_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_3"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>


            <!-- 4. Lottery -->
            <LinearLayout
                android:id="@+id/text_4_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/text_4_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lottery"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/text_4a_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_4a"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:layout_marginBottom="15dp"
                        />

                    <TextView
                        android:id="@+id/text_4b_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_4b"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />

                    <TextView
                        android:id="@+id/text_4c_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_4c"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />

                    <TextView
                        android:id="@+id/text_4d_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_4d"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:layout_marginBottom="15dp"
                        />

                    <TextView
                        android:id="@+id/text_4e_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_4e"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />


                </LinearLayout>
            </LinearLayout>


            <!-- 5. Register for the Event -->
            <LinearLayout
                android:id="@+id/text_5_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/text_5_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Register for the Event"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/text_5_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_5"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>


            <!-- 6. All Done! -->
            <LinearLayout
                android:id="@+id/text_6_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/text_6_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="All Done!"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/text_6a_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_6a"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:layout_marginBottom="15dp"
                        />

                    <TextView
                        android:id="@+id/text_6b_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria_6b"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>